<resources>
    <string name="app_name">proyecto</string>
    <string name="profile">Personal Data</string>
    <string name="settings">Settings</string>
    <string name="edit">E-Statement</string>
    <string name="code">Refferal code</string>
    <string name="FAQs">FAQs</string>
    <string name="ourhandbook">Our Handbook</string>
    <string name="community">Community</string>
    <string name="erick_basilio_rojas">erick_basilio_rojas</string>
    <string name="verification">Verification</string>
    <string name="btnatras">atras</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main3">MainActivity3</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

</resources>